# Sality_Detector

./: .gitignore  CRITICAL_ANALYSIS_FINAL.md  Cargo.toml  EXECUTIVE_SUMMARY.md  OCTOBER_26_ANALYSIS.md  README.md  VALIDATION_REPORT.md
docs/: remaining_tasks.md
src/: main.rs
